--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_riverpod: ^2.6.1
+  flutter_form_builder: ^9.2.1
+  form_builder_validators: ^9.1.0
+  go_router: ^14.6.2
 
 dev_dependencies:
   flutter_test:
