--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,12 @@ dependencies:
   flutter_form_builder: ^9.2.1
   form_builder_validators: ^9.1.0
   go_router: ^14.6.2
+  freezed: ^2.5.2
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  http: ^1.2.2
+  shared_preferences: ^2.2.3
+  either_dart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +56,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.9
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
