--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.2.3
   either_dart: ^1.0.0
+  table_calendar: ^3.0.9
+  intl: ^0.18.1
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
