--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_charts: ^0.5.2
   syncfusion_flutter_charts: ^28.2.6
   fl_chart: ^0.70.2 
+  vibration: ^3.1.3
 
 dev_dependencies:
   flutter_test:
