--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   syncfusion_flutter_charts: ^28.2.6
   fl_chart: ^0.70.2 
   vibration: ^3.1.3
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
